force-app/main/default/objects/Matter__c/fields/Matter_Number__c.field-meta.xml
<CustomField>
    <fullName>Matter_Number__c</fullName>
    <displayFormat>MM-{00000}</displayFormat>
    <label>Matter Number</label>
    <type>AutoNumber</type>
</CustomField>