force-app/main/default/objects/Matter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Awaiting Full Payment</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment - Overdue/Dunning Letter(s) Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment - Referred to Treasury (should be able to add referred date)</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment - Referred to DOJ/US Attorney (should be able to add referred date)</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment - Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Penalty Paid in Full - Awaiting Completion of SEP/Compliance Order/Injunctive Relief</fullName>
            </value>
            <value>
                <fullName>No Penalty - Awaiting Completion of SEP/Compliance Order/Injunctive Relief</fullName>
            </value>
            <value>
                <fullName>Stayed - On Hold (proceedings paused pending interlocutory action)</fullName>
            </value>
            <value>
                <fullName>On Appeal</fullName>
            </value>
            <value>
                <fullName>Stayed</fullName>
            </value>
            <value>
                <fullName>Landmark</fullName>
            </value>
            <value>
                <fullName>Pending Federal Court Review</fullName>
            </value>
            <value>
                <fullName>Reviewed by Federal Court</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>