force-app/main/default/objects/Matter__c/fields/Statute__c.field-meta.xml
<CustomField>
    <fullName>Statute__c</fullName>
    <label>Statute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean Air Act</fullName>
            </value>
            <value>
                <fullName>Clean Water Act</fullName>
            </value>
            <value>
                <fullName>Comprehensive Environmental Response Compensation and Liability Act</fullName>
            </value>
            <value>
                <fullName>Emergency Planning and Community Right-to-Know Act</fullName>
            </value>
            <value>
                <fullName>Equal Access to Justice</fullName>
            </value>
            <value>
                <fullName>Equal Employment Opportunity</fullName>
            </value>
            <value>
                <fullName>Federal Insecticide Act</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>