force-app/main/default/objects/Matter__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample1</fullName>
            </value>
            <value>
                <fullName>CAFO</fullName>
            </value>
            <value>
                <fullName>CAFO w/Compliance Order</fullName>
            </value>
            <value>
                <fullName>CAFO w/SEP</fullName>
            </value>
            <value>
                <fullName>CAFO w/Injunctive Relief</fullName>
            </value>
            <value>
                <fullName>no penalty</fullName>
            </value>
            <value>
                <fullName>ESA</fullName>
            </value>
            <value>
                <fullName>ESA w/ Compliance</fullName>
            </value>
            <value>
                <fullName>On Consent (AOC) Plan</fullName>
            </value>
            <value>
                <fullName>Unilateral (UAO)</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Penalty only (w/proposed amount)</fullName>
            </value>
            <value>
                <fullName>Penalty only (notice pleading)</fullName>
            </value>
            <value>
                <fullName>Penalty (proposed amount) w/ Compliance Order</fullName>
            </value>
            <value>
                <fullName>Penalty (notice pleading) w/ Compliance Order</fullName>
            </value>
            <value>
                <fullName>CAA (not 112(r))</fullName>
            </value>
            <value>
                <fullName>CAA 112(r)</fullName>
            </value>
            <value>
                <fullName>CWA</fullName>
            </value>
            <value>
                <fullName>CERCLA</fullName>
            </value>
            <value>
                <fullName>RCRA</fullName>
            </value>
            <value>
                <fullName>SDWA</fullName>
            </value>
            <value>
                <fullName>TSCA 207</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>