force-app/main/default/objects/Matter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40 C.F.R. 1.25(e)</fullName>
            </value>
            <value>
                <fullName>Administrative Order</fullName>
            </value>
            <value>
                <fullName>ADR</fullName>
            </value>
            <value>
                <fullName>CAFO (using 22.13(b) to simultaneously commence and conclude)</fullName>
            </value>
            <value>
                <fullName>CERCLA 106(b)</fullName>
            </value>
            <value>
                <fullName>CERCLA 107(r) Agreement</fullName>
            </value>
            <value>
                <fullName>CERCLA 122(h) Cost Recovery Settlement</fullName>
            </value>
            <value>
                <fullName>CERCLA Lien – 107(l)</fullName>
            </value>
            <value>
                <fullName>CERCLA Prospective Purchaser Agreement</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>EAJA</fullName>
            </value>
            <value>
                <fullName>EEO</fullName>
            </value>
            <value>
                <fullName>Enforcement Appeals</fullName>
            </value>
            <value>
                <fullName>Federal Facility Compliance Agreement</fullName>
            </value>
            <value>
                <fullName>Field Citation (RCRA – RUST/LUST)</fullName>
            </value>
            <value>
                <fullName>Improper Practice</fullName>
            </value>
            <value>
                <fullName>Judicial Stipulated Penalty</fullName>
            </value>
            <value>
                <fullName>Notice of Determination (NOD)</fullName>
            </value>
            <value>
                <fullName>Notice of Noncompliance (NON)</fullName>
            </value>
            <value>
                <fullName>Notice of Refusal of Admission (FIFRA)</fullName>
            </value>
            <value>
                <fullName>Notice of Violation (NOV)</fullName>
            </value>
            <value>
                <fullName>Other (Type)</fullName>
            </value>
            <value>
                <fullName>Permit Appeals</fullName>
            </value>
            <value>
                <fullName>Quick Resolution</fullName>
            </value>
            <value>
                <fullName>Specially delegated by Administrator</fullName>
            </value>
            <value>
                <fullName>Stop Sale, Use or Removal Order (SSURO) - FIFRA</fullName>
            </value>
            <value>
                <fullName>Sua Sponte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>