force-app/main/default/objects/Matter__c/recordTypes/EPA_EAB.recordType-meta.xml
<RecordType>
    <fullName>EPA_EAB</fullName>
    <active>true</active>
    <label>EPA EAB</label>
</RecordType>