force-app/main/default/objects/Matter__c/recordTypes/EPA_OALJ.recordType-meta.xml
<RecordType>
    <fullName>EPA_OALJ</fullName>
    <active>true</active>
    <label>EPA OALJ</label>
</RecordType>