force-app/main/default/objects/Matter__c/recordTypes/EPA_RHC.recordType-meta.xml
<RecordType>
    <fullName>EPA_RHC</fullName>
    <active>true</active>
    <label>EPA RHC</label>
</RecordType>